--- a/app/components/common/welcome/welcome.roles.html
+++ b/app/components/common/welcome/welcome.roles.html
@@ -32,6 +32,7 @@
             </a>
         </div>
     </div>
+    <p style="text-align: center;">Select multiple roles if appropriate.</p>
     <br>
     <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;"><a class="btn btn-info pull-right" ui-sref="welcome.profile">Continue</a></h4>
