fix for parent caps

--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -10,7 +10,7 @@
                     <div class="pull-right" style="width: 65%;">
                         <table style="width:100%;">
                             <tr ng-repeat="p in dashboard.top.parents">
-                                <td style="margin-top:-3px; float: right; padding-right: 5px; text-align: right; min-width: 115px;">{{p.label}}</td><td style="width:100%;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></td>
+                                <td style="margin-top:-3px; float: right; padding-right: 5px; text-align: right; min-width: 115px;">{{p.label[0].toUpperCase() + p.label.slice(1);}}</td><td style="width:100%;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></td>
                             </tr>
                         </table>
                     </div>
@@ -24,7 +24,7 @@
                         <div class="pull-left">
                             <h2 class="font-light m-b-xs">Leaders</h2>
                             <div ng-repeat="lead in dashboard.top.leaders | limitTo: 5" style="float:left;">
-                                <a class="text-info" ui-sref="user.dashboard({profile: lead.value, location_path: lead.path.key, community: {}})"><small><span ng-if="$last && $index !== 0">&nbsp;and</span>&nbsp;{{lead.value.profile.name.toUpperCase() + lead.value.profile.name.slice(1);}}<span ng-if="!$last && dashboard.top.leaders.length > 2">,</span></small></a>
+                                <a class="text-info" ui-sref="user.dashboard({profile: lead.value, location_path: lead.path.key, community: {}})"><small><span ng-if="$last && $index !== 0">&nbsp;and</span>&nbsp;{{lead.value.profile.name}}<span ng-if="!$last && dashboard.top.leaders.length > 2">,</span></small></a>
                             </div>
                         </div>
                     </div>
