fix for clusters

--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -4,13 +4,13 @@
             <div class="hpanel">
                 <div class="panel-body" style="width:100%; height: 85px;">
                     <div class="pull-left">
-                        <h2 class="font-light m-b-xs">Markets</h2>
+                        <h2 class="font-light m-b-xs">Industries</h2>
                         <div ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="fa fa-gear pull-left" ng-click="nav.communitySettings(); $event.stopPropagation();" tooltip-placement="left" tooltip="Settings" style="opacity: .6; cursor: pointer; margin-top: 5px; font-size: 18px;"></div>
                     </div>
                     <div class="pull-right" style="width: 65%;">
                         <table style="width:100%;">
                             <tr ng-repeat="p in dashboard.top.parents">
-                                <td style="margin-top:-3px; float: right; padding-right: 5px; text-align: right; min-width: 115px;">{{p.label[0].toUpperCase() + p.label.slice(1);}}</td><td style="width:100%;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></td>
+                                <td style="margin-top:-3px; float: right; padding-right: 5px; text-align: right; min-width: 115px;"><a href="{{nav.community.key + '/' + p.label}}">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></td><td style="width:100%;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></td>
                             </tr>
                         </table>
                     </div>
