--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,10 @@
 /* Custom */
 
+.nav-nohover:hover {
+  background-color: #fff !important;
+  cursor: default !important;
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
