--- a/app/less/various.less
+++ b/app/less/various.less
@@ -758,7 +758,8 @@ footer, .push {
 }
 
 #side-menu li.active a, #side-menu li:hover {
-  color: #999;
+  color: #444;
+  font-weight: bold;
 }
 
 #side-menu li .nav-second-level li a {
