fixed tour and changed nav

--- a/app/components/common/auth/login.html
+++ b/app/components/common/auth/login.html
@@ -22,6 +22,8 @@
                 </div>
             </div>
         </div>
+        <div class="text-center" random-quote></div>
+        <br>
         <div class="row">
             <div class="col-md-12 text-center">
                 &copy; 2015 StartupCommunity.org
