--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -120,13 +120,13 @@ body {
 
 .fixed-navbar #header {
   width: 100%;
-  position: fixed;
-  z-index: 1000;
+  //position: fixed; //changed 12/11/15
+  //z-index: 1000;  //changed 12/11/15
 
 }
 
 .fixed-navbar .wrapper {
-  top: 62px;
+  //top: 62px;  // changed 12/11/15
 }
 
 .fixed-sidebar #menu {
