added click to tweet to welcome

--- a/app/components/common/auth/login.html
+++ b/app/components/common/auth/login.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-center" random-quote></div>
+        <li style="list-style: none;" class="text-center"><span id="quote" random-quote></span><a ng-click="auth.clickToTweet()"><img id="tweet-this" src="/public/images/twitter-16.png" style="margin-left: 5px; margin-top: -4px; height: 13px; width: 13px;"/></a></li>
         <br>
         <div class="row">
             <div class="col-md-12 text-center">
