--- a/app/components/common/welcome/welcome.html
+++ b/app/components/common/welcome/welcome.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <li style="list-style: none;" class="text-center"><span id="quote" random-quote></span><a ng-click="welcome.clickToTweet()"><img id="tweet-this" src="/public/images/twitter-16.png" style="margin-left: 5px; margin-top: -4px; height: 13px; width: 13px;"/></a></li>
+        <li ng-show="welcome.quote" style="list-style: none;" class="text-center"><span id="quote" random-quote></span><a ng-click="welcome.clickToTweet()"><img id="tweet-this" src="/public/images/twitter-16.png" style="margin-left: 5px; margin-top: -4px; height: 13px; width: 13px;"/></a></li>
         <br>
         <div class="row">
             <div class="col-md-12 text-center">
