removed header padding

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -503,7 +503,7 @@ footer, .push {
 /* for Embedded view */
 
 .embed_header {
-  padding-top: 62px;
+  //padding-top: 62px;
   border-bottom: 1px solid #eee;
 }
 
