--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -1,23 +1,23 @@
 <div small-header class="normalheader" style="padding: 0 0 25px 0;">
-    <div class="row">
-        <div class="col-md-6">
+    <div class="row" style="margin-top:-10px;">
+        <div class="col-md-6" style="padding-top:10px;">
             <div class="hpanel">
-                <div class="panel-body" style="width:100%; height: 85px;">
-                    <div class="pull-left">
+                <div class="panel-body" style="height: 85px;">
+                    <div class="pull-left col-sm-2" style="padding-left:0;">
                         <h2 class="font-light m-b-xs">Industries</h2>
                         <div ng-if="nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1" class="fa fa-gear pull-left" ng-click="nav.communitySettings(); $event.stopPropagation();" tooltip-placement="left" tooltip="Settings" style="opacity: .6; cursor: pointer; margin-top: 5px; font-size: 18px;"></div>
                     </div>
-                    <div class="pull-right" style="width: 65%;">
-                        <table style="width:100%;">
-                            <tr ng-repeat="p in dashboard.top.parents">
-                                <td style="margin-top:-3px; float: right; padding-right: 5px; text-align: right; min-width: 115px;"><a ui-sref="community.dashboard({community_path: p.label, community: nav.communities[p.label], query: '*', location_path: nav.location.key})">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></td><td style="width:100%;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></td>
-                            </tr>
-                        </table>
+                    <div class="pull-right col-sm-8" style="padding-right:0;">
+                        <div ng-repeat="p in dashboard.top.parents" style="padding-left: 0; padding-right: 0; ">
+                            <div class="col-sm-6" style="margin-top:-3px; padding-left: 0; padding-right: 0; text-align: right;"><a ui-sref="community.dashboard({community_path: p.label, community: nav.communities[p.label], query: '*', location_path: nav.location.key})">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></div>
+                            <div class="col-sm-6 hidden-xs" style="padding-left: 10; padding-right: 0;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" style="padding-top:10px;">
             <div class="hpanel">
                 <div class="panel-body" style="padding: 10px 5px; height: 85px;">
                     <div class="col-xs-8">
