--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -10,7 +10,7 @@
                     <div class="pull-right col-sm-8" style="padding-right:0;">
                         <div ng-repeat="p in dashboard.top.parents" style="padding-left: 0; padding-right: 0; ">
                             <div class="col-sm-6" style="margin-top:-3px; padding-left: 0; padding-right: 0; text-align: right;"><a ui-sref="community.dashboard({community_path: p.label, community: nav.communities[p.label], query: '*', location_path: nav.location.key})">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></div>
-                            <div class="col-sm-6 hidden-xs" style="padding-left: 10; padding-right: 0;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></div>
+                            <div class="col-sm-6 hidden-xs" style="padding-left: 10px; padding-right: 0;"><progressbar value="p.value" max="dashboard.max" type="success" class="progress-small full"></progressbar></div>
                         </div>
                     </div>
 
@@ -111,7 +111,7 @@
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="item.count/dashboard.top.industries.count" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <progressbar ng-attr-value="(item.count/dashboard.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number">{{item.count}}</span>
@@ -133,7 +133,7 @@
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="item.count/dashboard.top.skills.count" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number">{{item.count}}</span>
